--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -7,9 +7,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <base href="/">
 
-        <title>Data Collection</title>
+        <title>Pocket Pill Box</title>
 
         <link rel="stylesheet" href="@routes.Assets.at("stylesheets/bootstrap.min.css")">
+
     </head>
 
     <body>
@@ -25,7 +26,8 @@
         <script src="@routes.Assets.at("javascripts/lib/angular.min.js")"></script>
         <script src="@routes.Assets.at("javascripts/lib/angular-route.min.js")"></script>
         <script src="@routes.Assets.at("javascripts/lib/ng-websocket.js")"></script>
-
+        <script src="@routes.Assets.at("javascripts/lib/angular-cookies.min.js")"></script>
+        <script src="@routes.Assets.at("javascripts/lib/angular-facebook.min.js")"></script>
 
         <script src="@routes.Assets.at("javascripts/app.js")"></script>
 
