--- a/app/views/template.scala.html
+++ b/app/views/template.scala.html
@@ -1,9 +1,20 @@
 @()(content: Html)
 
-<div class="container">
-    <div class="row">
-        <div class="col-md-12">
-            <h1>Data Collection</h1>
+<div id="custom-bootstrap-menu" class="navbar navbar-default " role="navigation" data-ng-controller="navController">
+    <div class="container-fluid">
+        <div class="navbar-header"><a class="navbar-brand" href="/">Pocket Pill Box</a>
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-menubuilder"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+            </button>
+        </div>
+        <div class="collapse navbar-collapse navbar-menubuilder">
+            <ul class="nav navbar-nav navbar-left">
+                <li><a href="/">All Pills</a>
+                </li>
+                <li><a href="/create">Add Pill</a>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a ng-click="singOut()" href="/">Sing Out</a></li>
+            </ul>
         </div>
     </div>
 </div>
